--- a/resources/style.css
+++ b/resources/style.css
@@ -11,11 +11,11 @@ body {
     margin: 0 auto;
     padding: 3rem 1rem 1rem 1rem;
 }
-pre {
+pre.shiki {
     border: 1px solid black;
-/*    padding: 0.5rem 1rem;*/
+    padding: 0.5rem 1rem;
 }
-pre code.hljs {
+pre.shiki {
     line-height: 130%;
 }
 
