--- a/resources/style.css
+++ b/resources/style.css
@@ -11,6 +11,14 @@ body {
     margin: 0 auto;
     padding: 3rem 1rem 1rem 1rem;
 }
+
+ul.toc {
+    border: 1px solid black;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    background-color: #ffffff;
+}
 pre.shiki {
     border: 1px solid black;
     padding: 0.5rem 1rem;
