--- a/resources/style.css
+++ b/resources/style.css
@@ -52,6 +52,7 @@ h1 {
     padding-bottom: 0.3em;
     font-size: 2em;
     border-bottom: 1px solid var(--border-color-muted);
+    margin-top: 3rem;
 }
 
 a {
