add code decoration examples add npm run serve parse out codeblock highlights

--- a/resources/style.css
+++ b/resources/style.css
@@ -60,3 +60,8 @@ a {
     text-decoration: underline;
     text-underline-offset: 0.2rem;
 }
+
+
+.highlighted-word {
+    border: 5px solid red;
+}
