--- a/resources/style.css
+++ b/resources/style.css
@@ -25,7 +25,7 @@ article {
 }
 nav {
     /*position: absolute;*/
-    max-width: 10rem;
+    /*max-width: 10rem;*/
     /*top:0;*/
 }
 nav.docset {
