--- a/resources/style.css
+++ b/resources/style.css
@@ -51,12 +51,14 @@ nav ul {
 nav li {
     padding: 0.25rem 0.5rem;
 }
-nav li:hover {
-    background-color: #dcdcdc;
-}
-nav li a {
+
+nav a {
     text-decoration: none;
     color: black;
+    display: block;
+}
+nav a:hover {
+    background-color: #dcdcdc;
 }
 
 /* headers */
@@ -75,7 +77,6 @@ h3 {
 
 /* code blocks */
 pre.shiki {
-    border: 1px solid black;
     padding: 0.5rem 1rem;
 }
 pre.shiki {
@@ -83,9 +84,7 @@ pre.shiki {
     margin:0;
 }
 .codeblock-wrapper {
-    border:1px solid black;
-    background-color: #4C9A91;
-    color: #666666;
+    border: 1px solid #8e8e8e;
     padding:0;
     margin:0;
     position: relative;
